<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskManager</string>
    <string name="action_settings">Settings</string>

    <!-- Header Button -->
    <string name="plus">+</string>
    <string name="less">-</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>

    <!-- POPUP Filter -->
    <string name="timeFilterlabel">Time</string>
    <string name="statusFilterLabel">Status</string>
    <string name="start">Start:</string>
    <string name="selectStartDate">Select start date:</string>
    <string name="end">End:</string>
    <string name="selectEndDate">Select end date:</string>
    <string name="validate">Valid</string>
    <string name="close">Close</string>

    <!-- POPUP Sort -->
    <string name="sortByTitle">Sort by Title</string>
    <string name="sortByStatus">Sort by Status</string>
    <string name="sortByPriority">Sort by Priority</string>
    <string name="sortByNone">No Sort</string>

    <!-- Create Page -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="labelDate">Date</string>
    <string name="dateFormat">dd-mm-yyyy</string>
    <string name="labelTime">Hour</string>
    <string name="timeFormat">hh:mm</string>
    <string name="labelStatus">Status</string>
    <string name="labelPriority">Priority</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="pleaseFillTheFields">Please fill all the fields</string>

    <string-array name="status_array">
        <item>To do</item>
        <item>In progress</item>
        <item>Done</item>
    </string-array>

    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <!-- SQL Message -->
    <string name="savedIntoDB">Task saved</string>
    <string name="editedIntoDB">Task edited</string>
    <string name="deletedIntoDB">Task deleted</string>

</resources>