<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical" >

    <Switch
        android:id="@+id/switchTitle"
        style="@style/popupFilterText"
        android:text="@string/title" />

    <EditText
        android:id="@+id/textTitle"
        style="@style/popupFilterText"
        android:ems="10"
        android:hint="@string/title"
        android:lines="1"
        android:maxLength="30" />

    <Switch
        android:id="@+id/switchDate"
        style="@style/popupFilterText"
        android:text="@string/labelDate" />

    <TextView
        android:id="@+id/labelStart"
        style="@style/popupFilterText"
        android:text="@string/start" />

    <TextView
        android:id="@+id/dateStartValue"
        style="@style/popupFilterText"
        android:clickable="true"
        android:hint="@string/dateFormat"
        android:maxLines="1"
        android:onClick="showCalendarDialogOnStart" />

    <TextView
        android:id="@+id/labelEnd"
        android:text="@string/end"
        style="@style/popupFilterText" />

    <TextView
        android:id="@+id/dateEndValue"
        style="@style/popupFilterText"
        android:clickable="true"
        android:hint="@string/dateFormat"
        android:maxLines="1"
        android:onClick="showCalendarDialogOnEnd" />

    <Switch
        android:id="@+id/switchStatus"
        style="@style/popupFilterText"
        android:text="@string/statusFilterLabel" />

    <Spinner
        android:id="@+id/status_spinner_popup"
        style="@style/popupFilterText"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="#FFF"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/valid"
        android:text="@string/validate"
        style="@style/popupFilterText" />

    <Button
        android:id="@+id/close"
        style="@style/popupFilterText"
        android:text="@string/close" />

</LinearLayout>