<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sortTitle"
        android:text="@string/sortByTitle" 
        style="@style/popupSortText"/>

    <TextView
        android:id="@+id/sortStatus"
        android:text="@string/sortByStatus" 
        style="@style/popupSortText"/>

    <TextView
        android:id="@+id/sortPriority"
        android:text="@string/sortByPriority" 
        style="@style/popupSortText"/>

    <TextView
        android:id="@+id/sortNone"
        android:text="@string/sortByNone"
        style="@style/popupSortText" />

</LinearLayout>