<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
   <EditText
       android:id="@+id/textTitle"
       android:hint="@string/title"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:ems="10" >
       <requestFocus />
   </EditText>

   <EditText
       android:id="@+id/textDescription"
       android:layout_below="@id/textTitle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:lines="8"
       android:minLines="6"
       android:ems="10"
       android:hint="@string/description"
       android:inputType="textMultiLine" />
  
   <TextView
       android:id="@+id/labelDate"
       android:layout_below="@id/textDescription"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/labelDate"
       android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dateValue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/labelDate"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:hint="@string/dateFormat"
        android:maxLines="1"
        android:onClick="showCalendarDialog"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/labelTime"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/timeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateValue"
        android:layout_alignLeft="@+id/dateValue"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="showTimeDialog"
        android:text="@string/timeFormat"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
        android:id="@+id/buttonsSaveDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >
    
    	<Button
            android:id="@+id/buttonSave"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:onClick="saveTask"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:onClick="deleteTask"
            android:text="@string/delete" />
    </LinearLayout>


</RelativeLayout>
